[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "rosetta-coverage"
version = "0.1.0"

[dependencies]
env_logger = "0.3.2"
firebase = "0.9.1"
log = "0.3.5"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.0"

[dependencies.coverage]
branch = "library-refactor"
git = "https://github.com/euclio/rust-rosetta"
path = "coverage"
version = "*"
